chore: changed package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mahmud/okra-php",
+    "name": "horlarmeday/okra-php",
     "description": "Okra core products implementation",
     "keywords": ["financial data", "fintech", "Nigeria okra", "okra core products"],
     "type": "library",
